--- a/app/views/ineligible.html
+++ b/app/views/ineligible.html
@@ -13,7 +13,7 @@
       <a class="link-back" href="/url/of/previous/page">Back</a>
 
       <h1 class="heading-large">
-        Unfortunately you are ineligible for this service
+        Unfortunately you are ineligible for this service sorry about that
       </h1>
 
       <p>Please continue with your practicing and try again when you can juggle more than 3 balls.</p>
